fixed horizontal scroll issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,7 @@ textarea {
   animation: fadeOut 1s 1s;
   animation-fill-mode: forwards;
 }
+
+body {
+  overflow-x: hidden;
+}
